<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/avatar_img"
        app:civ_border_width="2dp"
        app:civ_border_color="#70d6ff"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/username_txt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/avatar_img"
        app:layout_constraintBottom_toTopOf="@+id/name_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/name_txt"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/avatar_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar_img"
        app:layout_constraintTop_toBottomOf="@+id/username_txt"
        />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/company_txt"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/company"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/avatar_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar_img"
        app:layout_constraintTop_toBottomOf="@+id/name_txt"
        />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/location_txt"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/location"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/avatar_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar_img"
        app:layout_constraintTop_toBottomOf="@+id/company_txt"
        />

</androidx.constraintlayout.widget.ConstraintLayout>